# Tried

./: meson.build
include/tried/: node.h  visual_node.h  world.h
src/: main.c  meson.build  node.c  visual_node.c  world.c
subprojects/raylib/: meson.build
